--- a/new/css/project.css
+++ b/new/css/project.css
@@ -17,6 +17,14 @@
     background-size: cover;
     background-repeat: no-repeat;
     border-bottom: thin solid black;
+    -webkit-filter: brightness(70%);
+    filter: brightness(70%);
+    transition: all 0.5s;
+}
+
+.header-image:hover {
+    -webkit-filter: brightness(100%);
+    filter: brightness(100%);
 }
 
 .project-title {
